- Fixed "the (nothing) you are wearing is cursed" problem which annoys
  recently deceased players.
- Blood bond should not crash now.
- Added curse item spell for rogues (not fully implemented).
- Cleaned up various code and added protos for some funcs

25/07/2001 (darkgod)
- Fury, Dig, Spin warrior technics
- Fixed DSM being dopepd without unpolying
- Fixed morphing and not lossing eq wit eq is inscribed !
- /me works in chat

26/07/2001 (evileye)
- Fixed password prompt in client
- Bug in netserver which could result in bus fault fixed.
- Added Player menu to wizard commands (framework mainly)
- Added wizard level genocide

27/07/2001 (evileye)
- Fixed double experience bug on priests and sorcerors.

28/07/2001 (darkgod)
- Ghost cant gain experience
- Diving as a ghost dont affect recall depth

28/07/2001 (evileye)
- Cloned monsters do not drop anymore, and yield no experience
  Mimic count is no longer updated either.

30/07/2007
- Telepaths dont share hp anymore, it was:
  1) silyl given the idea of only the spirit of the telepath moving
  2) cheezy
- Telepaths only share half their mana
- Player levels now goes up to 100
- Monster can ain levels up to 500

02/08/2001
- Randarts rarer
- Randart power reduced
- Max 2 EA on randarts
- Max +7 mana on randarts
- Tidal Wave mana/level increased
- Healing in hellish mode is now only 3/4 instead of 1/2
- Player Golems! One can find pieces of golem and make a powerfull ally
- Level requirement for objects, exepct for the char that found it
- Level requirments on objects
- One can inscribe an object #of the Fool to get the object to display:
  "The Dager of the Fool"
- Races get different mana
- race restrict class
- Mana penality for armor increased
- Increased speed effect at high levels

04/08/2001
- New houses ready for testing prior to potential server reset
- Extended dungeon. After level 100(5000') it loops to pseudo level 1
  but with all monsters gaining +100 level

05/08/2001
- 90 day player timeout added.
