@@ -1541,7 +1541,7 @@ player_race race_info[MAX_RACES] =
 		90, 10, 190, 20,
 		82, 10, 180, 15,
 		4,
-                0xFFFFFFFF,
+                0xFFFFFFFF - BITS(CLASS_UNBELIEVER),
                 125,
 	},
 
@@ -1581,7 +1581,7 @@ player_race race_info[MAX_RACES] =
 		66, 4, 100, 20,
 		5,
                 0xFFFFFFFF - BITS(CLASS_MAGE) - BITS(CLASS_SORCERER),
-                80,
+                90,
 	},
 	{
                 "DragonRider",
@@ -1592,7 +1592,7 @@ player_race race_info[MAX_RACES] =
                 180,  6, 255, 25,
                 150,  4, 230, 20,
                 0,
-                0xFFFFFFFF,
+                0xFFFFFFFF - BITS(CLASS_MIMIC),
                 95,
         },
 };
@@ -3349,7 +3349,7 @@ cptr spell_names[8][64] =
 
 	  /* Killing from Afar */
 	  "Acid Shots",
-	  "Tri Shot",
+          "Fire Explosion Shot",
 	  "Confustion Shots",
 	  "Poison Shots",
 	  "Piercing Shots",
@@ -3358,11 +3358,11 @@ cptr spell_names[8][64] =
 	  "",
 
 	  /* Arrows of the Master Archers */
-	  "Tri Fire",
-	  "Tri Poison",
-	  "Forward Force",
-	  "Frenzy Shot",
-	  "Power Shots",
+          "Cold Explosion Shot",
+          "Lightning Explosion Shot",
+          "Acid Explosion Shot",
+          "Power Shots",
+          "Sonic Wave Shots",
 	  "",
 	  "",
 	  "",
